--- a/app/assets/images/favicon/html_code.html
+++ b/app/assets/images/favicon/html_code.html
@@ -2,10 +2,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/Dfv87ZbNh2/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/Dfv87ZbNh2/favicon-16x16.png">
 <link rel="manifest" href="/Dfv87ZbNh2/site.webmanifest">
-<link rel="mask-icon" href="/Dfv87ZbNh2/safari-pinned-tab.svg" color="#ffffff">
+<link rel="mask-icon" href="/Dfv87ZbNh2/safari-pinned-tab.svg" color="#eb6864">
 <link rel="shortcut icon" href="/Dfv87ZbNh2/favicon.ico">
 <meta name="apple-mobile-web-app-title" content="P-Active">
 <meta name="application-name" content="P-Active">
-<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileColor" content="#eb6864">
 <meta name="msapplication-config" content="/Dfv87ZbNh2/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#eb6864">
